Java smells freshened